[package]
name = "nx"
version = "0.2.0"
authors = ["XorTroll"]
edition = "2021"
include = [
    "src",
    "nx_derive"
]

[dependencies]
paste = "1.0"
logpacket = { git = "https://github.com/aarch64-switch-rs/logpacket" }
arrayvec = { version = "0.7.4", default-features = false }
static_assertions = "1.1.0"
lock_api = { version = "0.4.12", features = ["nightly"] }
generic_once_cell = "0.1.1"
once_cell = { version = "1.19.0", default-features = false, features = ["race"] }
atomic_enum = "0.3.0"
zeroize = { version = "1.8.1", features = ["aarch64"] }
nx-derive = { path = "nx-derive/" }

[dependencies.unwinding]
version = "0.2.4"
default-features = false
features = ["unwinder", "panic", "fde-custom", "personality"]

[dependencies.linked_list_allocator]
version = "0.10.5"
default-features = false
features = [ "const_mut_refs", "alloc_ref", "use_spin" ]

[features]
services = []
crypto = []
smc = []
gpu = ["services"]
fs = ["services"]
input = ["services"]
la = ["services"]
rand = ["services"]

[lints.rust]
internal_features = "allow" # We need this since we're peeking into a Pin while implementing the Threading API.
#missing_docs = "warn"
#unsafe_op_in_unsafe_fn = "deny"