[package]
name = "nx"
version = "0.5.0"
authors = ["XorTroll", "Pantsman0"]
edition = "2024"
include = [
    "src",
    "nx_derive"
]

[features]
default = []
services = []
smc = []
gpu = ["services"]
vty = ["canvas", "dep:embedded-term", "dep:embedded-graphics-core"]
console = ["fonts"]
canvas = ["gpu", "dep:line_drawing"]
fonts = ["canvas", "dep:ab_glyph", "dep:font8x8"]
truetype = ["fonts"]
fs = ["services"]
input = ["services", "applet"]
la = ["services"]
rand = ["services", "dep:rand"]
socket = ["services"]
applet = ["services"]
mii = ["services"]


[dependencies]
paste = "1.0"
logpacket = { git = "https://github.com/aarch64-switch-rs/logpacket", tag = "0.1.0"}
arrayvec = { version = "0.7.4", default-features = false }
static_assertions = "1.1.0"
lock_api = { version = "0.4.12", features = ["nightly"] }
atomic_enum = "0.3.0"
zeroize = { version = "1.8.1", features = ["aarch64"] }
nx-derive = { path = "nx-derive/" }
bitfield-struct = "0.11.0"
num-derive = "0.4.2"
enum-iterator = "2.1.0"
enum_dispatch = "0.3.13"

[dependencies.libc]
version = "0.2"
default-features = false

[dependencies.embedded-term]
version = "0.1.1"
optional = true
default-features = false

[dependencies.embedded-graphics-core]
version = "0.3.3"
optional = true

[dependencies.line_drawing]
optional = true
version = "1.0.1"

[dependencies.ab_glyph]
optional = true
version = "0.2"
default-features = false
features = ["variable-fonts", "libm"]

[dependencies.font8x8]
optional = true
version = "0.3"
default-features = false
features = ["unicode"]

[dependencies.num-traits]
version = "0.2.19"
default-features = false
features = ["libm"]

[dependencies.unwinding]
version = "0.2.6"
default-features = false
features = ["unwinder", "panic", "fde-custom", "personality"]

[dependencies.linked_list_allocator]
version = "0.10.5"
default-features = false
features = [ "const_mut_refs", "alloc_ref", "use_spin" ]

[dependencies.rand]
optional = true
version = "0.9"
default-features = false
features = ["alloc"]

